<resources>
    <string name="app_name">Chat Example</string>

    <!-- sign up button -->
    <string name="sign_up">Sign Up</string>

    <!-- log in button -->
    <string name="log_in">Log In</string>

    <!-- log out button -->
    <string name="log_out">Log Out</string>

    <!-- create conversation title -->
    <string name="create_title">Create</string>

    <!-- create conversation button -->
    <string name="create">Create Group Conversation</string>

    <!-- ok button -->
    <string name="ok">OK</string>

    <!-- username for login -->
    <string name="username">Username</string>

    <!-- password for login -->
    <string name="password">Password</string>

    <!-- conversations activity title -->
    <string name="conversations">Conversations</string>

    <!-- conversation activity title -->
    <string name="conversation">Conversation</string>

    <!-- loading dialog title -->
    <string name="loading">Loading</string>

    <!-- loading logging in sub-title -->
    <string name="signing_up">Signing in&#8230;</string>

    <!-- loading logging in sub-title -->
    <string name="logging_in">Logging in&#8230;</string>

    <!-- loading logging out sub-title -->
    <string name="logging_out">Logging out&#8230;</string>

    <!-- loading create a conversation -->
    <string name="creating">Creating&#8230;</string>

    <!-- loading attachment -->
    <string name="attaching">Attaching&#8230;</string>

    <!-- confirm dialog title -->
    <string name="confirm">Confirm</string>

    <!-- confirm string for log out -->
    <string name="are_your_sure_to_log_out">Are you sure to log out?</string>

    <!-- confirm dialog positive btn -->
    <string name="yes">Yes</string>

    <string name="dismiss">Dismiss</string>

    <!-- confirm dialog negative btn -->
    <string name="no">NO</string>

    <!-- login failed -->
    <string name="login_failed">Couldn\'t login. Please check your username and password.</string>

    <!-- signup failed -->
    <string name="signup_failed">Couldn\'t signup. Please check your username and password.</string>

    <!-- logout failed -->
    <string name="logout_failed">Logout failed!</string>


    <!-- conversation title -->
    <string name="title">Conversation Title</string>

    <!-- conversation meta -->
    <string name="meta">Meta</string>
    <string name="unread_count">Unread Count</string>
    <string name="last_read_message">Last Read Message</string>

    <!-- click on conversation options -->
    <string-array name="conversation_options">
        <item>Enter</item>
        <item>View Meta</item>
        <item>Edit</item>
        <item>Leave</item>
        <item>Delete</item>
        <item>Update Admins</item>
        <item>Update Participants</item>
    </string-array>

    <!-- intent title for selecting pic -->
    <string name="select_image">Select Image</string>

    <!-- confirm string for log out -->
    <string name="are_your_sure_to_delete_conversation">Are you sure to delete the conversation?</string>

    <!-- confirm string for log out -->
    <string name="are_your_sure_to_leave_conversation">Are you sure to leave the conversation?</string>

    <!-- Add/Remove Admin title -->
    <string name="add_remove_admins">Add/Remove Admin</string>

    <!-- Add/Remove Participants title -->
    <string name="add_remove_participants">Add/Remove Participants</string>

    <string-array name="message_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <!-- Go to conversation list button in api list activity -->
    <string name="api_test_list">API Test List</string>
    <string name="go_to_conversation">Go to conversation</string>
    <string name="go_to_api_test">Go to API Test</string>
    <string name="continue_btn">Continue</string>
    <string name="params_indicator">Please fill in the parameters below</string>
    <string name="params_incomplete">Please fill in all the parameters</string>
    <string name="unsubscribe_btn">Unsubscribe</string>
</resources>
